# ranger

./: .Rbuildignore  .gitignore  .gitmodules  .travis.yml  404.html  DESCRIPTION  NAMESPACE  NEWS  NEWS.md  README.md  _pkgdown.yml  _site.yml  authors.html  authors.md  index.Rmd  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: R-CMD-check-cran.yaml  R-CMD-check.yaml  cpp-build-and-tests.yaml  cpp-build.yaml  cpp.yaml  pkgdown.yaml
R/: RcppExports.R  csrf.R  deforest.R  doc_data.R  formula.R  getTerminalNodeIDs.R  holdoutRF.R  hshrink.R  importance.R  infinitesimalJackknife.R  onAttach.R  predict.R  predictions.R  print.R  ranger.R  rangerts.R  timepoints.R  treeInfo.R  utility.R
benchmark_Mcomp/: README  README.md  test_with_Mcomp_data_sets.Rmd  test_with_Mcomp_data_sets.html  test_with_Mcomp_data_sets.md
benchmark_Mcomp/results/: blocksize_m3.rds  m3_0.5.rds  m3_0.6.rds  m3_0.7.rds  m3_0.8.rds  m3_0.9.rds  stat_m3.rds  stat_m4.rds
benchmark_Mcomp/scripts/: 0_setup.R  1_Mcomp_benchmark.R  2_result_analysis.R
cpp/src/: globals.h  version.h
cpp/src/Forest/: Forest.cpp  Forest.h  ForestClassification.cpp  ForestClassification.h  ForestProbability.cpp  ForestProbability.h  ForestRegression.cpp  ForestRegression.h  ForestSurvival.cpp  ForestSurvival.h
cpp/src/Tree/: Tree.cpp  Tree.h  TreeClassification.cpp  TreeClassification.h  TreeProbability.cpp  TreeProbability.h  TreeRegression.cpp  TreeRegression.h  TreeSurvival.cpp  TreeSurvival.h
cpp/src/utility/: Data.cpp  Data.h  DataChar.cpp  DataChar.h  DataDouble.cpp  (+5 more)
cpp/test/: README.md
cpp_version/: .cproject  .gitignore  CMakeLists.txt  COPYING
cpp_version/cmake/: version.h.in
cpp_version/cross_compile/: build_all  toolchain_win32.cmake  toolchain_win64.cmake
cpp_version/src/: globals.h  main.cpp  pcg_extras.hpp  pcg_random.hpp  version.h
cpp_version/src/Forest/: Forest.cpp  Forest.h  ForestClassification.cpp  ForestClassification.h  ForestProbability.cpp  ForestProbability.h  ForestRegression.cpp  ForestRegression.h  ForestSurvival.cpp  ForestSurvival.h
cpp_version/src/Tree/: Tree.cpp  Tree.h  TreeClassification.cpp  TreeClassification.h  TreeProbability.cpp  TreeProbability.h  TreeRegression.cpp  TreeRegression.h  TreeSurvival.cpp  TreeSurvival.h
cpp_version/src/global/: globals.h
cpp_version/src/utility/: ArgumentHandler.cpp  ArgumentHandler.h  Data.cpp  Data.h  DataChar.cpp  DataChar.h  DataDouble.cpp  DataDouble.h  DataFloat.cpp  DataFloat.h  utility.cpp  utility.h
cpp_version/test/: CMakeLists.txt  README.md  test_with_r.R  testthat.R  utility_test.cpp
cpp_version/test/testthat/: .gitignore  test_arguments.R  test_classification.R  test_probability.R  test_regression.R  test_survival.R
data/: elec_data.rda
inst/include/: ranger.h  rangerts.h
man/: csrf.Rd  deforest.Rd  elec_data.Rd  getTerminalNodeIDs.Rd  holdoutRF.Rd  hshrink.Rd  importance.ranger.Rd  importance.rangerts.Rd  importance_pvalues.Rd  parse.formula.Rd  predict.ranger.Rd  predict.ranger.forest.Rd  predict.rangerts.Rd  predict.rangerts.forest.Rd  predictions.ranger.Rd  predictions.ranger.prediction.Rd  predictions.rangerts.Rd  predictions.rangerts.prediction.Rd  print.deforest.ranger.Rd  print.ranger.Rd  print.ranger.forest.Rd  print.ranger.prediction.Rd  print.rangerts.Rd  print.rangerts.forest.Rd  print.rangerts.prediction.Rd  ranger.Rd  rangerts.Rd  timepoints.ranger.Rd  timepoints.ranger.prediction.Rd  timepoints.rangerts.Rd  timepoints.rangerts.prediction.Rd  treeInfo.Rd
news/: index.html  index.md
ranger-python-extension/: .gitignore  README.md  wscript
ranger-python-extension/src/: .clang-format  python.cpp
ranger-r-package/ranger/: DESCRIPTION  NEWS
reference/: csrf.html  csrf.md  deforest.html  deforest.md  deforest.ranger.html  getTerminalNodeIDs.html  getTerminalNodeIDs.md  holdoutRF.html  holdoutRF.md  hshrink.html  hshrink.md  importance.html  importance.ranger.html  importance.ranger.md  importance_pvalues.html  importance_pvalues.md  index.html  index.md  parse.formula.html  parse.formula.md  predict.ranger.forest.html  predict.ranger.forest.md  predict.ranger.html  predict.ranger.md  predictions.html  predictions.ranger.html  predictions.ranger.md  predictions.ranger.prediction.html  predictions.ranger.prediction.md  print.deforest.ranger.html  print.deforest.ranger.md  print.ranger.forest.html  print.ranger.forest.md  print.ranger.html  print.ranger.md  print.ranger.prediction.html  print.ranger.prediction.md  ranger.html  ranger.md  timepoints.html  (+6 more)
revdep/: README.md  cran.md  failures.md
source/: .gitignore  CMakeLists.txt
source/src/: globals.h  main.cpp  version.h
src/: AAA_check_cpp11.cpp  AAA_check_cpp14.cpp  Data.cpp  Data.h  DataChar.cpp  DataChar.h  DataDouble.cpp  DataDouble.h  DataFloat.cpp  DataFloat.h  DataRcpp.h  DataSparse.cpp  DataSparse.h  Forest.cpp  Forest.h  ForestClassification.cpp  ForestClassification.h  ForestProbability.cpp  ForestProbability.h  ForestRegression.cpp  ForestRegression.h  ForestSurvival.cpp  ForestSurvival.h  Makevars  Makevars.win  RcppExports.cpp  Tree.cpp  Tree.h  TreeClassification.cpp  TreeClassification.h  TreeProbability.cpp  TreeProbability.h  TreeRegression.cpp  TreeRegression.h  TreeSurvival.cpp  TreeSurvival.h  globals.h  rangerCpp.cpp  ranger_init.c  utility.cpp  (+2 more)
tests/: testthat.R
tests/testthat/: test_betasplit.R  test_char.R  test_classification.R  test_classweights.R  test_csrf.R  test_deforest.R  test_extratrees.R  test_formula.R  test_genabel.R  test_hellinger.R  test_hshrink.R  test_importance.R  test_importance_casewise.R  test_importance_pvalues.R  test_inbag.R  test_interface.R  test_jackknife.R  test_loss_weights.R  test_maxstat.R  test_missings.R  test_nodestats.R  test_poissonsplit.R  test_predict.R  test_print.R  test_probability.R  test_quantreg.R  test_ranger.R  test_rangerts.R  test_regression.R  test_regularization.R  test_reproducibility.R  test_seed.R  test_sparse.R  test_splitweights.R  test_survival.R  test_treeInfo.R  test_unordered.R
(+60 files in other folders)
